--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@capacitor/haptics": "5.0.4",
     "@capacitor/keyboard": "5.0.4",
     "@capacitor/status-bar": "5.0.4",
-    "@ionic/angular": "^7.0.0",
-    "ionicons": "^7.0.0",
+    "@ionic/angular": "^7.0.14",
+    "chart.js": "^4.3.0",
+    "ionicons": "^7.1.2",
     "rxjs": "~7.8.0",
+    "swiper": "^9.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
